--- a/src/index.html
+++ b/src/index.html
@@ -161,8 +161,8 @@
 				<div class="col-1-4" style="width: 50%; float: left">
 					<div class="footer-des">
 						the c.p.u does a lot of work when it executes programs whilst using different algorithms
-						to schdule them which could be pre-emptive or non-premptive .this program simulates this
-						activity the pros and cons of these algorithms
+						to schdule them which could be pre-emptive or non-premptive .this program is gives us a
+						glimpse of what happens backed by visualtions for further insights
 					</div>
 				</div>
 				<div class="col-1-4" style="width: 50%; float: right">
@@ -193,7 +193,7 @@
 			<img src="./footer.svg" alt="footer-bg" class="footer-bg" />
 			<div class="footer-bottom">
 				<div class="row u-center">
-					<p>&copy; 2021 <span class="auth">Group 3</span> </p>
+					<p>&copy; 2021 <span class="auth">Group 3</span></p>
 					<!-- lab :) -->
 				</div>
 			</div>
